fix overflowing width

--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,8 @@ body {
 	margin: 0;
 	height: 100vh;
 	width: 100vw;
+	max-width: 100%;
+	border: 0;
 }
 
 * {
